discussion/kv_engine/179544/179544_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51979: Expose Collection isMetered via engine API

Change-Id: I50eb106f23fbbb2cf7ae56eaf3733c07227722f1

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-09-12 15:00:44.000000000
Message: 
Uploaded patch set 3: Patch Set 2 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-09-12 16:08:00.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20323/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/collections/manifest.h:49:66: error: cannot initialize a member subobject of type "Collections::Metered" with an rvalue of type "bool" [clang-diagnostic-error]
        CollectionID::Default, "_default", {}, ScopeID::Default, true};
                                                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/collections/vbucket_manifest_handles.h:510:16: error: cannot initialize return object of type "bool" with an rvalue of type "Collections::Metered" [clang-diagnostic-error]
        return itr->second.isMetered();
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/collections/vbucket_manifest_handles.h:614:16: error: cannot initialize return object of type "bool" with an rvalue of type "Collections::Metered" [clang-diagnostic-error]
        return itr->second.isMetered();
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_engine.cc:1787:16: error: no matching constructor for initialization of "cb::EngineErrorGetCollectionMetaResult" [clang-diagnostic-error]
        return {manifestUid, entry->sid, entry->metered};
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/collections.h:135:5: note: candidate constructor not viable: no known conversion from "Collections::Metered" to "bool" for 3rd argument
    EngineErrorGetCollectionMetaResult(uint64_t manifestId,
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/collections.h:119:5: note: candidate constructor not viable: requires 2 arguments, but 3 were provided
    EngineErrorGetCollectionMetaResult(engine_errc result, allowSuccess)
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/collections.h:124:14: note: candidate constructor not viable: requires single argument "result", but 3 arguments were provided
    explicit EngineErrorGetCollectionMetaResult(engine_errc result)
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/collections.h:130:14: note: candidate constructor not viable: requires single argument "manifestId", but 3 arguments were provided
    explicit EngineErrorGetCollectionMetaResult(uint64_t manifestId)
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/collections.h:115:8: note: candidate constructor (the implicit copy constructor) not viable: requires 1 argument, but 3 were provided
struct EngineErrorGetCollectionMetaResult {
       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/collections.h:115:8: note: candidate constructor (the implicit move constructor) not viable: requires 1 argument, but 3 were provided

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20323/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/collections/manifest.h:49:66:
error: cannot initialize a member subobject of type "Collections::Metered" with an rvalue of type "bool" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20323/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49307/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-master\kv_engine\engines\ep\src\collections/manifest.h(49): error C2440: "initializing": cannot convert from "bool" to "Collections::Metered" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49307/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41445/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/collections/manifest.h:49:66:
error: cannot initialize a member subobject of type "Collections::Metered" with an rvalue of type "bool"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41445/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23419/ : FAILURE

Compile error at [2022-09-12T15:29:03.981Z] ../kv_engine/engines/ep/src/collections/manifest.h:49:66:
error: cannot initialize a member subobject of type "Collections::Metered" with an rvalue of type "bool"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23419/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22295/ : FAILURE

Compile error at [2022-09-12T15:26:00.634Z] ../kv_engine/engines/ep/src/collections/manifest.h:49:70:
error: cannot convert ?bool? to ?Collections::Metered? in initialization
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22295/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30696/ : FAILURE

Compile error at [2022-09-12T15:33:28.616Z] ../kv_engine/engines/ep/src/collections/manifest.h:49:66:
error: cannot initialize a member subobject of type "Collections::Metered" with an rvalue of type "bool"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30696/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22655/ : FAILURE

Compile error at [2022-09-12T15:31:59.178Z] ../kv_engine/engines/ep/src/collections/manifest.h:49:70:
error: cannot convert ?bool? to ?Collections::Metered? in initialization
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22655/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21651/ : FAILURE

Compile error at [2022-09-12T16:07:53.367Z] ../kv_engine/engines/ep/src/collections/manifest.h:49:66:
error: cannot initialize a member subobject of type "Collections::Metered" with an rvalue of type "bool"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21651/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10031/ : FAILURE

Compile error at [2022-09-12T15:23:51.741Z] ../kv_engine/engines/ep/src/collections/manifest.h:49:66:
error: cannot initialize a member subobject of type "Collections::Metered" with an rvalue of type "bool"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10031/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10129/ : FAILURE

Compile error at [2022-09-12T15:15:09.030Z] ../kv_engine/engines/ep/src/collections/manifest.h:49:70:
error: cannot convert ?bool? to ?Collections::Metered? in initialization
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10129/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19545/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
